--- a/pom.xml
+++ b/pom.xml
@@ -3,13 +3,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>afip.dit.st</groupId>
-	<artifactId>dit-spring-vue</artifactId>
+	<groupId>afip.dit</groupId>
+	<artifactId>generar-boot-vue</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>jar</packaging>
 
-	<name>dit-spring-vue</name>
-	<description>Demo project for Spring Boot</description>
+	<name>generar-boot-vue</name>
+	<description>Ejecutable para generar un proyecto para Spring Boot y VueJs</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -23,7 +22,7 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
 	</properties>
-	<dependencies>
+	<!--<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
@@ -86,5 +85,5 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
-	</build>
+	</build-->
 </project>
