Invocacion Spring Boot

--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
 	<groupId>afip.dit</groupId>
 	<artifactId>generar-boot-vue</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
 
 	<name>generar-boot-vue</name>
 	<description>Ejecutable para generar un proyecto para Spring Boot y VueJs</description>
@@ -22,11 +23,7 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
 	</properties>
-	<!--<dependencies>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-actuator</artifactId>
-		</dependency>
+	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -42,9 +39,9 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 			<optional>true</optional>
-		</dependency>		
+		</dependency>
 	</dependencies>
-	<build>
+	<!--build>
 		<plugins>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
